# testdaf-mustertest

./: .gitignore  README.md  app.py  build_app.py  main.py  pyproject.toml  start_mac.command  start_windows.bat  test_tts.py
.github/workflows/: build.yml
docs/: architecture-overview.md  route-splitting-plan.md  testdaf-listening-task-analysis.md  testdaf-platform-roadmap-checklist.md
scoring_platform/: web.py
scoring_platform/services/: objective_scorer.py  report_builder.py  writing_scorer.py
scoring_platform/static/: score.css
scoring_platform/templates/: score_objective.html  student_home.html
scripts/: check_dashscope_model.py  compare_tts_instructions.py  debug_text_generation_matrix.py  verify_attempt_answer_trace.py
shared/question_bank/: __init__.py  reader.py
student_account_platform/: __init__.py  account_main.py  auth.py  config.py  web.py
student_account_platform/services/: account_store.py  (+1 more)
student_platform/: config.py  web.py
testdaf_platform/: __init__.py  config.py  web.py
tests/: __init__.py  test_attempt_store.py  test_create_listening_aufgabe_1_usecase.py  test_create_reading_aufgabe_1_usecase.py  test_create_reading_aufgabe_2_usecase.py  test_create_reading_aufgabe_3_usecase.py  test_create_writing_aufgabe_1_usecase.py  test_exam_builder_store.py  test_question_bank.py  test_question_presenter.py  test_routes_and_exports.py  test_scoring_objective_scorer.py  test_scoring_report_builder.py  test_scoring_speaking_audio.py  test_speaking_generator.py  test_student_account.py  test_text_generation_client.py  test_tts_instructions.py
(+68 files in other folders)
